--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 <div class="contents row">
   <p><%= @nickname %>さんの投稿一覧</p>
   <% @tweets.each do |tweet| %>
-    <%= render partial: "tweets/tweet", loclas: { tweet: tweet } %>
-    </div>
+    <%= render partial: "tweets/tweet", locals: { tweet: tweet } %>
   <% end %>
 </div>
